--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Miklós Tusz <mdtusz@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+minifb = "0.16"
 rand = "0.7.3"
 rayon = "1.3.0"
 ultraviolet = "0.4.6"
